--- a/Super Calculator/newCalculator.html
+++ b/Super Calculator/newCalculator.html
@@ -13,7 +13,7 @@
 
 <h1 style="text-align: center"> Calculator (Complete version) </h1>
 
-<input id="val1" type="Number" placeholder="Total" class="numberScreen"  >
+<input id="val1" type="Number" placeholder="Total" class="numberScreen" disabled>
 
 <input id="val2" type="text" class="numberScreen" disabled>
 
