--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Calculator</title>
-	<link rel="stylesheet" type="text/css" href="newCalculator.css">
+	<link rel="stylesheet" type="text/css" href="calculator.css">
 </head>
 <body>
 
@@ -10,21 +10,13 @@
 <div id="outside">
 
 <div id="scrDiv">
-
-<h1 style="text-align: center"> Calculator (Complete version) </h1>
-
-<input id="val1" type="Number" placeholder="Total" class="numberScreen"  >
-
-<input id="val2" type="text" class="numberScreen" disabled>
-
-<input id="total" type="Number" placeholder="Total" class="numberScreen" >
-	
+<h1 style="text-align: center">Calculator (MVP version)</h1>
+<input id="val1"  type="number" placeholder="Value 1" class="numberScreen">
 </input>
 
-
-
+<input id="val2" type="number" placeholder="Value 2" class="numberScreen"></input>
 	<!--Operators-->
-<button id="butAdd" class="opKey" value="+">+</button>
+<button id="butAdd" class="opKey" >+</button>
 
 <button id="butSub" class="opKey">-</button>
 
@@ -32,14 +24,10 @@
 
 <button id="butDiv" class="opKey">÷</button>
 
-<button id="butTot" class="opKey">=</button>
-
-<button id="butClr" class="opKey">CE</button>
-
-<button id="butDel" class="opKey">C</button>
+<button id="butClr" class="opKey">Clear</button>
 
 
-
+<input id="total" type="text" placeholder="Total" class="numberScreen" disabled></input>
 
 </div>
 
@@ -55,10 +43,10 @@
 	<button id="num7" class="butKey" >7</button>
 	<button id="num8" class="butKey" >8</button>
 	<button id="num9" class="butKey" >9</button>
-	<button id="add" class="butKey">+
+	<button id="add" class="butKey" style="visibility: hidden;">+
 	</button>
 	<button id="num0"  class="butKey" >0</button>
-	<button id="substract" class="butKey">-
+	<button id="substract" class="butKey"  style="visibility: hidden;">-
 	</button>
 </div>
 
@@ -70,7 +58,7 @@
 
 
 
-<script type="text/javascript" src="newCalculator.js">
+<script type="text/javascript" src="calculator.js">
 </script>
 </body>
 </html>
@@ -87,8 +75,3 @@
 <button id="0" onclick='document.getElementById("totalScreen").innerHTML =+ 0'>0</button>
 <button id="add" onclick='document.getElementById("totalScreen").innerHTML = '>+</button>
 <button id="substract" onclick='document.getElementById("totalScreen").innerHTML = '>-</button> -->
-
-<!-- <input id="val1"  type="number" placeholder="Value 1" class="numberScreen">
-</input>
-
-<input id="val2" type="number" placeholder="Value 2" class="numberScreen"></input> -->
