--- a/New Calculator/newCalculator.html
+++ b/New Calculator/newCalculator.html
@@ -13,9 +13,9 @@
 
 <h1 style="text-align: center"> Calculator (Complete version) </h1>
 
-<input id="val1" type="Number" placeholder="Total" class="numberScreen"  >
+<input id="val1" type="Number" placeholder="Total" class="numberScreen" disabled>
 
-<input id="val2" type="text" class="numberScreen" disabled>
+<input id="val2" type="text" class="numberScreen" style="display: none;">
 
 <input id="total" type="Number" placeholder="Total" class="numberScreen" >
 	
