--- a/Super Calculator/newCalculator.html
+++ b/Super Calculator/newCalculator.html
@@ -11,13 +11,13 @@
 
 <div id="scrDiv">
 
-<h1 style="text-align: center"> Calculator (Complete version) </h1>
+<h1> Calculator (Complete version) </h1>
 
-<input id="val1" type="Number" placeholder="Total" class="numberScreen" disabled>
+<input id="val1" type="text" placeholder="Total" class="numberScreen" disabled>
 
-<input id="val2" type="text" class="numberScreen" disabled>
+<!-- <input id="val2" type="text" class="numberScreen" style="display: none;"> -->
 
-<input id="total" type="Number" placeholder="Total" class="numberScreen" >
+<input id="total" type="text" placeholder="Total" class="numberScreen" disabled="">
 	
 </input>
 
@@ -36,7 +36,7 @@
 
 <button id="butClr" class="opKey">CE</button>
 
-<button id="butDel" class="opKey">C</button>
+<button id="butDel" class="opKey" style="display: none;">C</button>
 
 
 
@@ -55,11 +55,10 @@
 	<button id="num7" class="butKey" >7</button>
 	<button id="num8" class="butKey" >8</button>
 	<button id="num9" class="butKey" >9</button>
-	<button id="add" class="butKey">+
-	</button>
-	<button id="num0"  class="butKey" >0</button>
-	<button id="substract" class="butKey">-
-	</button>
+	<button id="numDot" class="butKey">.</button>
+	<button id="num0"  class="butKey" style="width: 63%;
+    border-radius: 19px;" >0</button>
+<!-- 	<button id="substract" class="butKey">-	</button> -->
 </div>
 
 
@@ -90,5 +89,4 @@
 
 <!-- <input id="val1"  type="number" placeholder="Value 1" class="numberScreen">
 </input>
-
 <input id="val2" type="number" placeholder="Value 2" class="numberScreen"></input> -->
